--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>😁hola</title>
 </head>
 <body>
-    <h1>Hola bienvenidos</h1>
+    <h1>Hola bienvenidos😁😁😁😁😁😊😊😊😊😊</h1>
     <script src="script.js"></script>
 </body>
 </html>
